# TFTP_Server_and_Client

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
TFTP/: CMakeLists.txt
TFTP/include/: tftp.hpp
TFTP/source/: tftp.cpp
TFTP/util/: types_enums_macros.hpp
TFTP_Client/: CMakeLists.txt  main.cpp
TFTP_Client/include/: tftp_client.hpp
TFTP_Client/source/: tftp_client.cpp
TFTP_Server/: CMakeLists.txt  main.cpp
TFTP_Server/include/: tftp_server.hpp
TFTP_Server/source/: tftp_server.cpp
